infra/k8s/timescaledb.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-postgresql
  namespace: fleet-dev
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: timescaledb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timescaledb
  namespace: fleet-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timescaledb
  template:
    metadata:
      labels:
        app: timescaledb
    spec:
      containers:
        - name: timescaledb
          image: timescale/timescaledb-ha:pg15-latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-init-db
              mountPath: /docker-entrypoint-initdb.d/init.sql
              subPath: init.sql
            - name: timescaledb-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-init-db
          configMap:
            name: postgres-init-db
        - name: timescaledb-data
          persistentVolumeClaim:
            claimName: timescaledb-data
